<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.astrologyforecasts.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.astrologyforecasts.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_editProfile"
            app:destination="@id/editProfileFragment"/>
    </fragment>

    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.example.astrologyforecasts.ui.profile.EditProfileFragment"
        android:label="@string/title_edit_profile"
        tools:layout="@layout/fragment_edit_profile" >

        <action
            android:id="@+id/action_editProfileFragment_to_profileFragment"
            app:destination="@id/navigation_profile" />

    </fragment>

    <fragment
        android:id="@+id/navigation_forecasts"
        android:name="com.example.astrologyforecasts.ui.forecast.ForecastsFragment"
        android:label="@string/title_forecasts"
        tools:layout="@layout/fragment_forecasts">
        <action
            android:id="@+id/action_forecasts_to_generatedForecast"
            app:destination="@id/generatedForecastFragment" />
    </fragment>

    <fragment
        android:id="@+id/generatedForecastFragment"
        android:name="com.example.astrologyforecasts.ui.forecast.GeneratedForecastFragment"
        android:label="Ваш прогноз"
        tools:layout="@layout/fragment_generated_forecast" />

</navigation>
